Google maps implementation

--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -1,14 +1,26 @@
+# Actions
+messages.action.save = Salvar
+
+# Menus
+messages.menu.header.commercial = Comercial
+messages.menu.purchase.title = Compras
+messages.menu.purchase.subtitle = Gerencie as compras da loja
+messages.menu.header.registration = Cadastros
+messages.menu.product.title = Produtos
+messages.menu.product.subtitle = Gerencie os produtos da loja
+messages.menu.supplier.title = Fornecedores
+messages.menu.supplier.subtitle = Gerencie os fornecedores da loja
 
 # Progressbar
 messages.progressbar.waitingserver = Aguardando resposta do servidor
 messages.progressbar.building = Processando dados na tela
 messages.progressbar.done = Concluído
 
-# Produtos
+# Product
 messages.product.name = Nome
 messages.product.code = Código
 messages.product.search.dialog.title = Pesquisa Produtos
-messages.product.search.dialog.errormessage = Ocorreu um erro ao tentar pesquisar dos produtos cadastrados!
+messages.product.search.dialog.errormessage = Ocorreu um erro ao tentar pesquisar os produtos cadastrados!
 messages.product.form.name.required = Nome do produto é uma informação obrigatória! Informe ao menos 3 caracteres.
 messages.product.form.code.required = Código é uma informação obrigatória! Informe ao menos 3 caracteres.
 messages.product.save.dialog.title = Cadastro Produtos
@@ -17,5 +29,29 @@ messages.product.save.dialog.errormessage = Ocorreu um erro ao tentar cadastar u
 messages.product.list.dialog.title = Lista de Produtos
 messages.product.list.dialog.errormessage = Ocorreu um erro ao tentar listar os produtos
 messages.product.delete.dialog.title = Exclusão de Produtos
-messages.product.delete.dialog.success = Produto cadastrado com sucesso!
-messages.product.delete.dialog.errormessage = Ocorreu um erro ao tentar cadastar um produto
+messages.product.delete.dialog.success = Produto removido com sucesso!
+messages.product.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um produto
+
+# Supplier
+messages.supplier.name = Nome
+messages.supplier.phone = Telefone
+messages.supplier.location = Endereço
+messages.supplier.tab.list = Lista de Fornecedores
+messages.supplier.tab.save = Cadastro Fornecedor
+messages.supplier.save.title = Dados do Fornecedor
+messages.supplier.save.subtitle = Informe os dados do fornecedor
+messages.supplier.search.dialog.title = Pesquisa Fornecedores
+messages.supplier.search.dialog.errormessage = Ocorreu um erro ao tentar pesquisar os fornecedores cadastrados!
+messages.supplier.form.name.placeholder = Entre com o nome do fornecedor
+messages.supplier.form.phone.placeholder = Entre com o telefone de contrato
+messages.supplier.form.location.placeholder = Entre com o endereço
+messages.supplier.form.name.required = Nome do fornecedor é uma informação obrigatória! Informe ao menos 3 caracteres.
+messages.supplier.save.dialog.title = Cadastro Fornecedores
+messages.supplier.save.dialog.success = Fornecedor cadastrado com sucesso!
+messages.supplier.save.dialog.errormessage = Ocorreu um erro ao tentar cadastar um fornecedor
+messages.supplier.list.dialog.title = Lista de Fornecedores
+messages.supplier.list.dialog.errormessage = Ocorreu um erro ao tentar listar os fornecedores
+messages.supplier.delete.dialog.title = Exclusão de Fornecedores
+messages.supplier.delete.dialog.success = Fornecedor removido com sucesso!
+messages.supplier.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um fornecedor
+
