Dev feature supplier

--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -34,6 +34,7 @@ messages.product.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir 
 
 # Supplier
 messages.supplier.name = Nome
+messages.supplier.email = Email
 messages.supplier.phone = Telefone
 messages.supplier.location = Endereço
 messages.supplier.tab.list = Lista de Fornecedores
@@ -43,9 +44,11 @@ messages.supplier.save.subtitle = Informe os dados do fornecedor
 messages.supplier.search.dialog.title = Pesquisa Fornecedores
 messages.supplier.search.dialog.errormessage = Ocorreu um erro ao tentar pesquisar os fornecedores cadastrados!
 messages.supplier.form.name.placeholder = Entre com o nome do fornecedor
+messages.supplier.form.email.placeholder = Entre com o email de contrato
 messages.supplier.form.phone.placeholder = Entre com o telefone de contrato
 messages.supplier.form.location.placeholder = Entre com o endereço
 messages.supplier.form.name.required = Nome do fornecedor é uma informação obrigatória! Informe ao menos 3 caracteres.
+messages.supplier.form.email.valid = Entre com um email válido!
 messages.supplier.save.dialog.title = Cadastro Fornecedores
 messages.supplier.save.dialog.success = Fornecedor cadastrado com sucesso!
 messages.supplier.save.dialog.errormessage = Ocorreu um erro ao tentar cadastar um fornecedor
