Add clients management feature

--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -1,15 +1,18 @@
 # Actions
 messages.action.save = Salvar
+messages.action.new_item = Criar Novo
 
 # Menus
 messages.menu.header.commercial = Comercial
 messages.menu.purchase.title = Compras
-messages.menu.purchase.subtitle = Gerencie as compras da loja
+messages.menu.purchase.subtitle = Gerencie as compras
 messages.menu.header.registration = Cadastros
 messages.menu.product.title = Produtos
-messages.menu.product.subtitle = Gerencie os produtos da loja
+messages.menu.product.subtitle = Gerencie os produtos
 messages.menu.supplier.title = Fornecedores
-messages.menu.supplier.subtitle = Gerencie os fornecedores da loja
+messages.menu.supplier.subtitle = Gerencie os fornecedores
+messages.menu.customer.title = Cliente
+messages.menu.customer.subtitle = Gerencie os clientes
 
 # Progressbar
 messages.progressbar.waitingserver = Aguardando resposta do servidor
@@ -57,4 +60,30 @@ messages.supplier.list.dialog.errormessage = Ocorreu um erro ao tentar listar os
 messages.supplier.delete.dialog.title = Exclusão de Fornecedores
 messages.supplier.delete.dialog.success = Fornecedor removido com sucesso!
 messages.supplier.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um fornecedor
+
+# Supplier
+messages.customer.name = Nome
+messages.customer.email = Email
+messages.customer.phone = Telefone
+messages.customer.location = Endereço
+messages.customer.tab.list = Lista de Clientes
+messages.customer.tab.save = Cadastro Cliente
+messages.customer.save.title = Dados do Cliente
+messages.customer.save.subtitle = Informe os dados do cliente
+messages.customer.search.dialog.title = Pesquisa Clientes
+messages.customer.search.dialog.errormessage = Ocorreu um erro ao tentar pesquisar os clientes cadastrados!
+messages.customer.form.name.placeholder = Entre com o nome do cliente
+messages.customer.form.email.placeholder = Entre com o email de contrato
+messages.customer.form.phone.placeholder = Entre com o telefone de contrato
+messages.customer.form.location.placeholder = Entre com o endereço
+messages.customer.form.name.required = Nome do cliente é uma informação obrigatória! Informe ao menos 3 caracteres.
+messages.customer.form.email.valid = Entre com um email válido!
+messages.customer.save.dialog.title = Cadastro Clientes
+messages.customer.save.dialog.success = Cliente cadastrado com sucesso!
+messages.customer.save.dialog.errormessage = Ocorreu um erro ao tentar cadastar um cliente
+messages.customer.list.dialog.title = Lista de Clientes
+messages.customer.list.dialog.errormessage = Ocorreu um erro ao tentar listar os clientes
+messages.customer.delete.dialog.title = Exclusão de Clientes
+messages.customer.delete.dialog.success = Cliente removido com sucesso!
+messages.customer.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um cliente
 
