--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -5,14 +5,16 @@ messages.action.new_item = Criar Novo
 # Menus
 messages.menu.header.commercial = Comercial
 messages.menu.purchase.title = Compras
-messages.menu.purchase.subtitle = Gerencie as compras
+messages.menu.purchase.subtitle = Gerencie suas compras
+messages.menu.sale.title = Vendas
+messages.menu.sale.subtitle = Gerencie suas vendas
 messages.menu.header.registration = Cadastros
 messages.menu.product.title = Produtos
-messages.menu.product.subtitle = Gerencie os produtos
+messages.menu.product.subtitle = Gerencie seus produtos
 messages.menu.supplier.title = Fornecedores
-messages.menu.supplier.subtitle = Gerencie os fornecedores
-messages.menu.customer.title = Cliente
-messages.menu.customer.subtitle = Gerencie os clientes
+messages.menu.supplier.subtitle = Gerencie seus fornecedores
+messages.menu.customer.title = Clientes
+messages.menu.customer.subtitle = Gerencie seus clientes
 
 # Progressbar
 messages.progressbar.waitingserver = Aguardando resposta do servidor
@@ -61,7 +63,7 @@ messages.supplier.delete.dialog.title = Exclusão de Fornecedores
 messages.supplier.delete.dialog.success = Fornecedor removido com sucesso!
 messages.supplier.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um fornecedor
 
-# Supplier
+# Customer
 messages.customer.name = Nome
 messages.customer.email = Email
 messages.customer.phone = Telefone
@@ -86,4 +88,42 @@ messages.customer.list.dialog.errormessage = Ocorreu um erro ao tentar listar os
 messages.customer.delete.dialog.title = Exclusão de Clientes
 messages.customer.delete.dialog.success = Cliente removido com sucesso!
 messages.customer.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um cliente
+
+# Sale
+messages.sale.customer = Cliente
+messages.sale.product = Produto
+messages.sale.quantity = Quantidade
+messages.sale.sale_date = Data da Venda
+messages.sale.amount = Valor Venda
+messages.sale.fare = Tarifa
+messages.sale.net_total = Valor Total Líquido
+messages.sale.track_code = Código Rastreamento
+
+messages.sale.tab.list = Lista das Vendas
+messages.sale.tab.save = Cadastro Venda
+
+messages.sale.save.title = Dados da Venda
+messages.sale.save.subtitle = Informe os dados da venda
+messages.sale.search.dialog.title = Pesquisa Vendas
+messages.sale.search.dialog.errormessage = Ocorreu um erro ao tentar pesquisar as vendas cadastradas!
+
+messages.sale.form.customer.placeholder = Informe o cliente
+messages.sale.form.product.placeholder = Informe o produto
+messages.sale.form.quantity.placeholder = Entre com a quantidade
+messages.sale.form.sale_date.placeholder = Entre com a data da Venda
+messages.sale.form.amount.placeholder = Entre com o valor da venda
+messages.sale.form.fare.placeholder = Entre com a tarifa
+messages.sale.form.net_total.placeholder = Entre com o valor total líquido
+messages.sale.form.track_code.placeholder = Entre com o código Rastreamento
+
+# messages.sale.form.name.required = Nome do cliente é uma informação obrigatória! Informe ao menos 3 caracteres.
+
+messages.sale.save.dialog.title = Cadastro Clientes
+messages.sale.save.dialog.success = Cliente cadastrado com sucesso!
+messages.sale.save.dialog.errormessage = Ocorreu um erro ao tentar cadastar um cliente
+messages.sale.list.dialog.title = Lista de Clientes
+messages.sale.list.dialog.errormessage = Ocorreu um erro ao tentar listar os clientes
+messages.sale.delete.dialog.title = Exclusão de Clientes
+messages.sale.delete.dialog.success = Cliente removido com sucesso!
+messages.sale.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um cliente
 
