--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -3,6 +3,9 @@ messages.action.save = Salvar
 messages.action.new_item = Criar Novo
 
 # Menus
+messages.menu.header.management = Gerencial
+messages.menu.dashboard.title = Painel de Controle
+messages.menu.dashboard.subtitle = Acompanhe a evolução os indicadores
 messages.menu.header.commercial = Comercial
 messages.menu.purchase.title = Compras
 messages.menu.purchase.subtitle = Gerencie suas compras
@@ -98,15 +101,12 @@ messages.sale.amount = Valor Venda
 messages.sale.fare = Tarifa
 messages.sale.net_total = Valor Total Líquido
 messages.sale.track_code = Código Rastreamento
-
 messages.sale.tab.list = Lista das Vendas
 messages.sale.tab.save = Cadastro Venda
-
 messages.sale.save.title = Dados da Venda
 messages.sale.save.subtitle = Informe os dados da venda
 messages.sale.search.dialog.title = Pesquisa Vendas
 messages.sale.search.dialog.errormessage = Ocorreu um erro ao tentar pesquisar as vendas cadastradas!
-
 messages.sale.form.customer.placeholder = Informe o cliente
 messages.sale.form.product.placeholder = Informe o produto
 messages.sale.form.quantity.placeholder = Entre com a quantidade
@@ -115,9 +115,12 @@ messages.sale.form.amount.placeholder = Entre com o valor da venda
 messages.sale.form.fare.placeholder = Entre com a tarifa
 messages.sale.form.net_total.placeholder = Entre com o valor total líquido
 messages.sale.form.track_code.placeholder = Entre com o código Rastreamento
-
-# messages.sale.form.name.required = Nome do cliente é uma informação obrigatória! Informe ao menos 3 caracteres.
-
+messages.sale.form.customer.required = Cliente é uma informação obrigatória!
+messages.sale.form.product.required = Produto é uma informação obrigatória!
+messages.sale.form.quantity.required = Quantidade é uma informação obrigatória!
+messages.sale.form.sale_date.required = Data da venda é uma informação obrigatória!
+messages.sale.form.amount.required = Valor total é uma informação obrigatória!
+messages.sale.form.net_total.required = Valor líquido total é uma informação obrigatória!
 messages.sale.save.dialog.title = Cadastro Clientes
 messages.sale.save.dialog.success = Cliente cadastrado com sucesso!
 messages.sale.save.dialog.errormessage = Ocorreu um erro ao tentar cadastar um cliente
