Finished dashboard feature #11

--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -5,7 +5,7 @@ messages.action.new_item = Criar Novo
 # Menus
 messages.menu.header.management = Gerencial
 messages.menu.dashboard.title = Painel de Controle
-messages.menu.dashboard.subtitle = Acompanhe a evolução os indicadores
+messages.menu.dashboard.subtitle = Acompanhe a evolução dos indicadores
 messages.menu.header.commercial = Comercial
 messages.menu.purchase.title = Compras
 messages.menu.purchase.subtitle = Gerencie suas compras
@@ -23,6 +23,24 @@ messages.menu.customer.subtitle = Gerencie seus clientes
 messages.progressbar.waitingserver = Aguardando resposta do servidor
 messages.progressbar.building = Processando dados na tela
 messages.progressbar.done = Concluído
+
+# Dashboard
+messages.dashboard.loading = Carregando...
+messages.dashboard.cashflow.title = Fluxo de Caixa
+messages.dashboard.cashflow.subtitle = Receitas x Despesas em R$
+messages.dashboard.cashflow.threemonths = Últimos 3 meses
+messages.dashboard.cashflow.sixmonths = Últimos 6 meses
+messages.dashboard.cashflow.oneyear = Último ano
+messages.dashboard.revenue.title = Faturamento
+messages.dashboard.netprofit.title = Lucro Líquido
+messages.dashboard.profitmargin.title = Margem de Lucro
+messages.dashboard.averageticket.title = Ticket Médio
+messages.dashboard.sales.title = Vendas
+messages.dashboard.customers.title = Clientes
+messages.dashboard.instock.title = Em estoque agora
+
+# Purchase
+messages.purchase.title = Compras
 
 # Product
 messages.product.name = Nome
@@ -93,6 +111,7 @@ messages.customer.delete.dialog.success = Cliente removido com sucesso!
 messages.customer.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um cliente
 
 # Sale
+messages.sale.title = Vendas
 messages.sale.customer = Cliente
 messages.sale.product = Produto
 messages.sale.quantity = Quantidade
