--- a/static/bundle/messages.properties
+++ b/static/bundle/messages.properties
@@ -38,6 +38,7 @@ messages.dashboard.averageticket.title = Ticket Médio
 messages.dashboard.sales.title = Vendas
 messages.dashboard.customers.title = Clientes
 messages.dashboard.instock.title = Em estoque agora
+messages.dashboard.balance.title = Saldo
 
 # Purchase
 messages.purchase.title = Compras
