--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -39,6 +39,7 @@ messages.dashboard.sales.title = Vendas
 messages.dashboard.customers.title = Clientes
 messages.dashboard.instock.title = Em estoque agora
 messages.dashboard.balance.title = Saldo
+messages.dashboard.accumulated_balance.title = Saldo Acumulado
 
 # Purchase
 messages.purchase.title = Compras
