--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -142,12 +142,12 @@ messages.sale.form.quantity.required = Quantidade é uma informação obrigatór
 messages.sale.form.sale_date.required = Data da venda é uma informação obrigatória!
 messages.sale.form.amount.required = Valor total é uma informação obrigatória!
 messages.sale.form.net_total.required = Valor líquido total é uma informação obrigatória!
-messages.sale.save.dialog.title = Cadastro Clientes
+messages.sale.save.dialog.title = Cadastro Venda
 messages.sale.save.dialog.success = Cliente cadastrado com sucesso!
-messages.sale.save.dialog.errormessage = Ocorreu um erro ao tentar cadastar um cliente
-messages.sale.list.dialog.title = Lista de Clientes
-messages.sale.list.dialog.errormessage = Ocorreu um erro ao tentar listar os clientes
-messages.sale.delete.dialog.title = Exclusão de Clientes
+messages.sale.save.dialog.errormessage = Ocorreu um erro ao tentar cadastar uma venda
+messages.sale.list.dialog.title = Lista de Vendas
+messages.sale.list.dialog.errormessage = Ocorreu um erro ao tentar listar as vendas
+messages.sale.delete.dialog.title = Exclusão de Venda
 messages.sale.delete.dialog.success = Cliente removido com sucesso!
-messages.sale.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um cliente
+messages.sale.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir uma venda
 
