--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -24,6 +24,10 @@ messages.progressbar.waitingserver = Aguardando resposta do servidor
 messages.progressbar.building = Processando dados na tela
 messages.progressbar.done = Concluído
 
+# Dialog
+messages.dialog.title = Aviso Importante
+messages.dialog.failure.message = Ocorreu um erro ao realizar a operação! Tente novamente e caso o mesmo persista, acesse o link "fale com o desenvolvedor" no rodapé da página e nos deixe uma messagem sobre o problema. Tomaremos providência o quanto antes! 
+
 # Dashboard
 messages.dashboard.loading = Carregando...
 messages.dashboard.cashflow.title = Fluxo de Caixa
@@ -47,10 +51,16 @@ messages.purchase.title = Compras
 # Product
 messages.product.name = Nome
 messages.product.code = Código
+messages.product.tab.list = Lista de Produtos
+messages.product.tab.save = Cadastro Produtos
+messages.product.save.title = Dados do Fornecedor
+messages.product.save.subtitle = Informe os dados do produto
 messages.product.search.dialog.title = Pesquisa Produtos
 messages.product.search.dialog.errormessage = Ocorreu um erro ao tentar pesquisar os produtos cadastrados!
+messages.product.form.name.placeholder = Entre com o nome do produto
+messages.product.form.code.placeholder = Entre com o código do produto
 messages.product.form.name.required = Nome do produto é uma informação obrigatória! Informe ao menos 3 caracteres.
-messages.product.form.code.required = Código é uma informação obrigatória! Informe ao menos 3 caracteres.
+messages.product.form.code.required = Código do produto é uma informação obrigatória! Informe ao menos 3 caracteres.
 messages.product.save.dialog.title = Cadastro Produtos
 messages.product.save.dialog.success = Produto cadastrado com sucesso!
 messages.product.save.dialog.errormessage = Ocorreu um erro ao tentar cadastar um produto
