--- a/static/bundle/messages.properties
+++ b/static/bundle/messages.properties
@@ -28,6 +28,9 @@ messages.progressbar.done = Concluído
 messages.dialog.title = Aviso Importante
 messages.dialog.failure.message = Ocorreu um erro ao realizar a operação! Tente novamente e caso o mesmo persista, acesse o link "fale com o desenvolvedor" no rodapé da página e nos deixe uma messagem sobre o problema. Tomaremos providência o quanto antes! 
 
+# Select
+messages.select.search = Pesquise...
+
 # Dashboard
 messages.dashboard.loading = Carregando...
 messages.dashboard.cashflow.title = Fluxo de Caixa
@@ -161,3 +164,47 @@ messages.sale.delete.dialog.title = Exclusão de Clientes
 messages.sale.delete.dialog.success = Cliente removido com sucesso!
 messages.sale.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um cliente
 
+# Purchase
+messages.sale.title = Compras
+messages.purchase.product = Produto 
+messages.purchase.supplier = Fornecedor
+messages.purchase.quantity = Quantidade
+messages.purchase.purchase_date = Data da Compra
+messages.purchase.payment_date = Data do Pagamento
+messages.purchase.received_date = Data de Recebimento
+messages.purchase.shipping_cost = Custo de Postagem
+messages.purchase.track_code = Código de Rastreamento
+messages.purchase.purchase_link = Link da Compra
+messages.purchase.cost = Custo por Unidade
+messages.purchase.total_cost = Custo Total da Compra
+messages.purchase.cost_dollar = Custo por Unidade (US$)
+messages.purchase.total_cost_dollar = Custo Total da Compra (US$)
+messages.purchase.exchange_dollar = Valor do Câmbio
+messages.purchase.invoice = Dados da Fatura
+messages.purchase.tab.list = Lista de Compras
+messages.purchase.tab.save = Cadastro Compra
+messages.purchase.save.title = Dados da Compra
+messages.purchase.save.subtitle = Informe abaixo
+messages.purchase.form.product.placeholder = Informe o producto
+messages.purchase.form.supplier.placeholder = Informe o fornecedor
+messages.purchase.form.quantity.placeholder = Entre com a quantidade de itens comprados
+messages.purchase.form.purchase_date.placeholder = Entre com a data da compra
+messages.purchase.form.payment_date.placeholder = Entre com a data de pagamento
+messages.purchase.form.received_date.placeholder = Entre com a data do recebimento
+messages.purchase.form.invoice.placeholder = Entre com dados sobre a fatura da compra
+messages.purchase.form.purchase_link.placeholder = Entre com o link da compra no site de origem
+messages.purchase.form.product.required = Produto é uma informação obrigatória!
+messages.purchase.form.supplier.required = Fornecedor é uma informação obrigatória!
+messages.purchase.form.quantity.required = Quantidade é numérico obrigatória e maior que zero!
+messages.purchase.form.purchase_date.required = Data da Compra é obrigatória!
+messages.purchase.form.payment_date.required = Data do pagamento é obrigatória!
+messages.purchase.form.cost.required = Custo por unidade é obrigatório!
+messages.purchase.form.total_cost.required = Custo total é obrigatório!
+messages.purchase.save.dialog.title = Cadastro de Compras
+messages.purchase.save.dialog.success = Compra cadastrada com sucesso!
+messages.purchase.save.dialog.errormessage = Ocorreu um erro ao tentar cadastar uma compra
+messages.purchase.list.dialog.title = Lista de Compras
+messages.purchase.list.dialog.errormessage = Ocorreu um erro ao tentar listar as compras
+messages.purchase.delete.dialog.title = Exclusão de Compras
+messages.purchase.delete.dialog.success = Compra removida com sucesso!
+messages.purchase.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir uma compra
