--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -28,6 +28,9 @@ messages.progressbar.done = Concluído
 messages.dialog.title = Aviso Importante
 messages.dialog.failure.message = Ocorreu um erro ao realizar a operação! Tente novamente e caso o mesmo persista, acesse o link "fale com o desenvolvedor" no rodapé da página e nos deixe uma messagem sobre o problema. Tomaremos providência o quanto antes! 
 
+# Select
+messages.select.search = Pesquise...
+
 # Dashboard
 messages.dashboard.loading = Carregando...
 messages.dashboard.cashflow.title = Fluxo de Caixa
@@ -161,3 +164,12 @@ messages.sale.delete.dialog.title = Exclusão de Venda
 messages.sale.delete.dialog.success = Cliente removido com sucesso!
 messages.sale.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir uma venda
 
+# Purchase
+messages.purchase.save.dialog.title = Cadastro de Compras
+messages.purchase.save.dialog.success = Compra cadastrada com sucesso!
+messages.purchase.save.dialog.errormessage = Ocorreu um erro ao tentar cadastar uma compra
+messages.purchase.list.dialog.title = Lista de Compras
+messages.purchase.list.dialog.errormessage = Ocorreu um erro ao tentar listar as compras
+messages.purchase.delete.dialog.title = Exclusão de Compras
+messages.purchase.delete.dialog.success = Compra removida com sucesso!
+messages.purchase.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir uma compra
