--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -1,6 +1,7 @@
 # Actions
 messages.action.save = Salvar
 messages.action.new_item = Criar Novo
+messages.action.sign_out = Sair
 
 # Menus
 messages.menu.header.management = Gerencial
