Remove a console.log()

--- a/static/bundle/messages.properties
+++ b/static/bundle/messages.properties
@@ -166,7 +166,7 @@ messages.sale.delete.dialog.success = Cliente removido com sucesso!
 messages.sale.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um cliente
 
 # Purchase
-messages.sale.title = Compras
+messages.purchase.title = Compras
 messages.purchase.product = Produto 
 messages.purchase.supplier = Fornecedor
 messages.purchase.quantity = Quantidade
