--- a/static/bundle/messages_en.properties
+++ b/static/bundle/messages_en.properties
@@ -1,11 +1,11 @@
 # Actions
-messages.action.sign_out = Sair
-messages.action.save = Salvar
-messages.action.new_item = Criar Novo
+messages.action.sign_out = Log Out
+messages.action.save = Save
+messages.action.new_item = New Item
 
 # Menus
-messages.menu.header.management = Gerencial
-messages.menu.dashboard.title = Painel de Controle
+messages.menu.header.management = Management
+messages.menu.dashboard.title = Control Panel
 messages.menu.dashboard.subtitle = Acompanhe a evolução dos indicadores
 messages.menu.header.commercial = Comercial
 messages.menu.purchase.title = Compras
@@ -211,6 +211,6 @@ messages.purchase.delete.dialog.success = Compra removida com sucesso!
 messages.purchase.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir uma compra
 
 # Postal service
-messages.postal.trackinginfo.dialog.title = Rastreamento de Pacote
-messages.postal.trackinginfo.dialog.errormessage = Erro ao consultar rastreamento de pacote 
-messages.postal.trackinginfo.searchingalert = Consultando serviço postal... por favor aguarde! 
+messages.postal.trackinginfo.dialog.title = Package tracking
+messages.postal.trackinginfo.dialog.errormessage = Error occurred package tracking
+messages.postal.trackinginfo.searchingalert = Calling postal service... please wait! 
