--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -209,3 +209,8 @@ messages.purchase.list.dialog.errormessage = Ocorreu um erro ao tentar listar as
 messages.purchase.delete.dialog.title = Exclusão de Compras
 messages.purchase.delete.dialog.success = Compra removida com sucesso!
 messages.purchase.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir uma compra
+
+# Postal service
+messages.postal.trackinginfo.dialog.title = Rastreamento de Pacote
+messages.postal.trackinginfo.dialog.errormessage = Erro ao consultar rastreamento de pacote 
+messages.postal.trackinginfo.searchingalert = Consultando serviço postal... por favor aguarde! 
