Fix endpoint host https://code.google.com/p/googleappengine/issues/detail?id=9384

--- a/static/bundle/messages_en.properties
+++ b/static/bundle/messages_en.properties
@@ -1,11 +1,11 @@
 # Actions
-messages.action.sign_out = Log Out
-messages.action.save = Save
-messages.action.new_item = New Item
+messages.action.sign_out = Sair
+messages.action.save = Salvar
+messages.action.new_item = Criar Novo
 
 # Menus
-messages.menu.header.management = Management
-messages.menu.dashboard.title = Control Panel
+messages.menu.header.management = Gerencial
+messages.menu.dashboard.title = Painel de Controle
 messages.menu.dashboard.subtitle = Acompanhe a evolução dos indicadores
 messages.menu.header.commercial = Comercial
 messages.menu.purchase.title = Compras
@@ -73,6 +73,8 @@ messages.product.list.dialog.errormessage = Ocorreu um erro ao tentar listar os 
 messages.product.delete.dialog.title = Exclusão de Produtos
 messages.product.delete.dialog.success = Produto removido com sucesso!
 messages.product.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um produto
+messages.product.purchasesintegrityviolation = Não é possível proceder pois o produto está associado ao menos uma compra
+messages.product.salesintegrityviolation = Não é possível proceder pois o produto está associado ao menos uma venda
 
 # Supplier
 messages.supplier.name = Nome
@@ -99,6 +101,7 @@ messages.supplier.list.dialog.errormessage = Ocorreu um erro ao tentar listar os
 messages.supplier.delete.dialog.title = Exclusão de Fornecedores
 messages.supplier.delete.dialog.success = Fornecedor removido com sucesso!
 messages.supplier.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um fornecedor
+messages.supplier.purchasesintegrityviolation = Não é possível proceder pois o fornecedor está associado ao menos uma compra
 
 # Customer
 messages.customer.name = Nome
@@ -125,6 +128,7 @@ messages.customer.list.dialog.errormessage = Ocorreu um erro ao tentar listar os
 messages.customer.delete.dialog.title = Exclusão de Clientes
 messages.customer.delete.dialog.success = Cliente removido com sucesso!
 messages.customer.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um cliente
+messages.customer.salesintegrityviolation = Não é possível proceder pois o cliente está associado ao menos uma venda
 
 # Sale
 messages.sale.title = Vendas
@@ -211,6 +215,6 @@ messages.purchase.delete.dialog.success = Compra removida com sucesso!
 messages.purchase.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir uma compra
 
 # Postal service
-messages.postal.trackinginfo.dialog.title = Package tracking
-messages.postal.trackinginfo.dialog.errormessage = Error occurred package tracking
-messages.postal.trackinginfo.searchingalert = Calling postal service... please wait! 
+messages.postal.trackinginfo.dialog.title = Rastreamento de Pacote
+messages.postal.trackinginfo.dialog.errormessage = Erro ao consultar rastreamento de pacote 
+messages.postal.trackinginfo.searchingalert = Consultando serviço postal... por favor aguarde! 
