--- a/static/bundle/messages_pt_BR.properties
+++ b/static/bundle/messages_pt_BR.properties
@@ -73,6 +73,8 @@ messages.product.list.dialog.errormessage = Ocorreu um erro ao tentar listar os 
 messages.product.delete.dialog.title = Exclusão de Produtos
 messages.product.delete.dialog.success = Produto removido com sucesso!
 messages.product.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um produto
+messages.product.purchasesintegrityviolation = Não é possível proceder pois o produto está associado ao menos uma compra
+messages.product.salesintegrityviolation = Não é possível proceder pois o produto está associado ao menos uma venda
 
 # Supplier
 messages.supplier.name = Nome
@@ -99,6 +101,7 @@ messages.supplier.list.dialog.errormessage = Ocorreu um erro ao tentar listar os
 messages.supplier.delete.dialog.title = Exclusão de Fornecedores
 messages.supplier.delete.dialog.success = Fornecedor removido com sucesso!
 messages.supplier.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um fornecedor
+messages.supplier.purchasesintegrityviolation = Não é possível proceder pois o fornecedor está associado ao menos uma compra
 
 # Customer
 messages.customer.name = Nome
@@ -125,6 +128,7 @@ messages.customer.list.dialog.errormessage = Ocorreu um erro ao tentar listar os
 messages.customer.delete.dialog.title = Exclusão de Clientes
 messages.customer.delete.dialog.success = Cliente removido com sucesso!
 messages.customer.delete.dialog.errormessage = Ocorreu um erro ao tentar excluir um cliente
+messages.customer.salesintegrityviolation = Não é possível proceder pois o cliente está associado ao menos uma venda
 
 # Sale
 messages.sale.title = Vendas
